# Spectral_Clustering

./: .gitignore  README.md
FInal Submission/: setup.py  spkmeans.c  spkmeansmodule.c
Final_Submission/: setup.py  spkmeans.c  spkmeans.h  spkmeansmodule.c
TomerPart/: CMakeLists.txt  Lnorm tester result.csv  commands.txt  ddg tester result.csv  ddg.c  ddg.h  eigengap.c  eigengap.h  input12.csv  input14.csv  input15.csv  input26.csv  input3.csv  input_1.txt  input_a_rami_accurate.txt  jacobi.c  jacobi.h  jacobi_input.txt  kmeans.c  kmeans.h  kmeans_pp_spk.py  lnorm.c  lnorm.h  main.c  matrix3.csv  matrix4.csv  nadav_jacobi.py  nsc.c  nsc.h  setup.py  spkmeans.c  spkmeans.h  spkmeans.py  spkmeansmodule.c  test.py  test9.csv  test_final_project.py  utils.c  utils.h  wam tester result.csv  (+2 more)
TomerPart/kmeanspp_hw2/: kmeans.c  kmeans_pp.py  setup.py
TomerPart/test/: output_J_0.txt  output_J_1.txt  output_J_2.txt  output_J_3.txt  output_J_4.txt  output_J_5.txt  output_J_6.txt  output_J_7.txt  output_J_8.txt  output_J_9.txt  tamir_test_results.csv
